force-app/main/default/objects/ChangeRequest/ChangeRequest.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>