force-app/main/default/objects/ChangeRequest/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Change Requests</relationshipLabel>
    <relationshipName>Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>