force-app/main/default/objects/ChangeRequest/fields/Implementation_Plan__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Plan__c</fullName>
    <label>Implementation Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>