force-app/main/default/objects/ChangeRequest/fields/Quick_Case__c.field-meta.xml
<CustomField>
    <fullName>Quick_Case__c</fullName>
    <label>Quick Case</label>
    <length>255</length>
    <type>Text</type>
</CustomField>