force-app/main/default/objects/ChangeRequest/fields/Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Change Requests</relationshipLabel>
    <relationshipName>Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>