force-app/main/default/objects/ChangeRequest/fields/Roll_Back_Plan__c.field-meta.xml
<CustomField>
    <fullName>Roll_Back_Plan__c</fullName>
    <label>Roll Back Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>