force-app/main/default/objects/ChangeRequest/fields/Test_Plan__c.field-meta.xml
<CustomField>
    <fullName>Test_Plan__c</fullName>
    <label>Test Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>