force-app/main/default/objects/ChangeRequest/recordTypes/Change_Request_IT_infrastructure.recordType-meta.xml
<RecordType>
    <fullName>Change_Request_IT_infrastructure</fullName>
    <active>true</active>
    <label>Change Request - IT infrastructure</label>
</RecordType>