force-app/main/default/objects/ChangeRequest/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Name</columns>
    <columns>Subject</columns>
    <columns>Status</columns>
    <columns>Priority</columns>
    <columns>Owner</columns>
    <columns>ChangeType</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>Admins</group>
    </sharedTo>
</ListView>