force-app/main/default/objects/ChangeRequest/listViews/Change_Request_Hardware_Approval_ChangeRequest.listView-meta.xml
<ListView>
    <fullName>Change_Request_Hardware_Approval_ChangeRequest</fullName>
    <columns>Name</columns>
    <columns>Subject</columns>
    <columns>Status</columns>
    <columns>Priority</columns>
    <columns>CreatedDate</columns>
    <columns>CreatedBy</columns>
    <filterScope>Everything</filterScope>
    <label>Change Request - IT Infrastructure</label>
    <sharedTo>
        <group>IT_Infrastructure</group>
        <group>Service_Desk</group>
    </sharedTo>
</ListView>